Date	Added
11/29
	* Added mapbug.txt which is displayed in map-server, displays
	  the last bug or w/e fixed for the map-server [MC Cameri]
	  -You may change it whenever you want
	  -It will only show if mapbug.txt exists
	  -This file must not be included in releases
	* Made some changes in map_versionscreen() to make it easier to
	  read/change in the source [MC Cameri]
	* Fixed a typo in _ShowMessage() removing the message caption. [MC Cameri]
	* Fixed typo in map_helpscreen() showing -h instead of --?. [MC Cameri]
        * Added more sc_data checks in skill.c and pc.c [celest]
        * Updated Quagmire, Enchant Deadly Poison, Fog Wall [celest]

11/28
	* Fixed a crash in login_sql/login.c [MouseJstr]
	* made common/socket.c more crash resistant [MouseJstr]
	* Added flush_fifos to socket.c so that we can make sure everything
	  has been sent before we shut the process down [MouseJstr]
	* Modified src/char_sql/char.c to flush fifos on exit [MouseJstr]
	* Fixed a crash in src/map/map.c shutdown where it would
	  use the char_fd session after it was alrady cleaned up [MouseJstr]
	* removed conf-templ/atcommand_athena.conf.orig [MouseJstr]
	* removed a USE from sql-files/main.sql that should not be there [MouseJstr]
	* Changed MSG_INFO color to bright white, since bright blue want so bright... [MC Cameri]
	* Made Map Removed: %d string be displayed only if there were maps removed. [MC Cameri]
	* Fixed online system for char not sending players left "online" to login when restarting [Wizputer]
	* Fixed damage formula of Cart revolution: 150% +1% per 80ea [Lupus]
	* Removed 2x Chance of Equipment Breaking during CRITICAL attacks [Lupus]
	* Fix some file props [MouseJstr]
	* Added map_versionscreen(), displayed when --version flag is passed on command-line. [MC Cameri]
	* Finished map_helpscreen(), displayed when --help flag passed on command-line. [MC Cameri]
	* Changed Guilds Extention Skill to +6 people per level. [Lupus]