@@ -1,5 +1,6 @@
 Date	Added
 11/29
+	* Fixed crash in src/char_sql/char.c when setting chars offline [MouseJstr]
 	* Added mapbug.txt which is displayed in map-server, displays
 	  the last bug or w/e fixed for the map-server [MC Cameri]
 	  -You may change it whenever you want
